objects/signaturit__SignatureRequestSigner__c.object
<CustomObject>
    <description>Target signers for a signature request</description>
    <fields>
        <fullName>signaturit__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Account / PersonalAccount</description>
        <inlineHelpText>Related Account / PersonalAccount</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Signature Request signers</relationshipLabel>
        <relationshipName>Signature_Request_signers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>signaturit__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related signer contact</description>
        <inlineHelpText>Related signer contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signature Request signers</relationshipLabel>
        <relationshipName>SignatureRequestSigners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>signaturit__Email__c</fullName>
        <description>External signer&apos;s email</description>
        <inlineHelpText>External signer&apos;s email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>signaturit__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related signer lead record</description>
        <inlineHelpText>Related signer lead record</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Signature Request signers</relationshipLabel>
        <relationshipName>SignatureRequestSigners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>signaturit__LongName__c</fullName>
        <description>Not truncated name</description>
        <inlineHelpText>Not truncated name</inlineHelpText>
        <label>Long name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>signaturit__Name__c</fullName>
        <description>Name of the external signer</description>
        <inlineHelpText>Name of the external signer</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__NumberCancelDocuments__c</fullName>
        <description>Number of cancel signatures</description>
        <inlineHelpText>Number of cancel signatures</inlineHelpText>
        <label>Number Cancel Signatures</label>
        <summarizedField>signaturit__SignatureSignerFile__c.signaturit__CancelCount__c</summarizedField>
        <summaryForeignKey>signaturit__SignatureSignerFile__c.signaturit__SignatureRequestSigner__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>signaturit__NumberCompletedDocuments__c</fullName>
        <description>Number of completed signatures</description>
        <inlineHelpText>Number of completed signatures</inlineHelpText>
        <label>Number Completed Signatures</label>
        <summarizedField>signaturit__SignatureSignerFile__c.signaturit__CompletedCount__c</summarizedField>
        <summaryForeignKey>signaturit__SignatureSignerFile__c.signaturit__SignatureRequestSigner__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>signaturit__NumberDocuments__c</fullName>
        <description>Number of signatures</description>
        <inlineHelpText>Number of signatures</inlineHelpText>
        <label>Number Signatures</label>
        <summaryForeignKey>signaturit__SignatureSignerFile__c.signaturit__SignatureRequestSigner__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>signaturit__Phone__c</fullName>
        <description>Signer&apos;s phone</description>
        <inlineHelpText>Signer&apos;s phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>signaturit__Progress__c</fullName>
        <formula>IF( signaturit__NumberCompletedDocuments__c == signaturit__NumberDocuments__c , $Label.signaturit__SIG_StatusCompleted, IF( signaturit__NumberCancelDocuments__c &gt;= 1 , $Label.signaturit__SIG_StatusCanceled, IF( CONTAINS(signaturit__SignatureRequest__r.signaturit__Progress__c , $Label.signaturit__SIG_StatusCanceled), $Label.signaturit__SIG_StatusCanceled, $Label.signaturit__SIG_StatusInProgress)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__SignatureRequest__c</fullName>
        <description>Parent signature request</description>
        <inlineHelpText>Parent signature request</inlineHelpText>
        <label>Signature Request</label>
        <referenceTo>signaturit__SignatureRequest__c</referenceTo>
        <relationshipLabel>Signature Request Signers</relationshipLabel>
        <relationshipName>SignatureRequestSigners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>signaturit__SignerName__c</fullName>
        <description>Link to the record using full name</description>
        <formula>HYPERLINK(
  &quot;/&quot; &amp; Id,
  signaturit__LongName__c,
  &quot;_self&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to the record using full name</inlineHelpText>
        <label>Signer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Type__c</fullName>
        <description>Sirgner type of the Signer</description>
        <inlineHelpText>Sirgner type of the Signer</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>signer</fullName>
                    <label>Signer</label>
                </value>
                <value>
                    <fullName>validator</fullName>
                    <label>Validator</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>signaturit__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related signer user record</description>
        <inlineHelpText>Related signer user record</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SignatureRequestSigners</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Firmante de Solicitud de Firma</label>
    <listViews>
        <fullName>signaturit__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Signature Request signer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Firmantes de Solicitud de Firma</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>